Update video button to Download, add GenerateCard analytics event, improve share link
- Change video button to show 'Download' text and download icon
- Add GenerateCard analytics event when Create Card is clicked
- Improve share link error handling and validation
- Update README with analytics viewing instructions

--- a/index.html
+++ b/index.html
@@ -608,8 +608,8 @@
                     <span class="text-xs font-medium text-gray-700">Share</span>
                 </button>
                 <button id="download-video-btn" class="flex flex-col items-center gap-1 p-3 rounded-lg hover:bg-gray-100 transition-colors" aria-label="Download Video">
-                    <span class="material-icons text-purple-600">videocam</span>
-                    <span class="text-xs font-medium text-gray-700">Video</span>
+                    <span class="material-icons text-purple-600">download</span>
+                    <span class="text-xs font-medium text-gray-700">Download</span>
                 </button>
                 <button id="shake-btn" class="flex flex-col items-center gap-1 p-3 rounded-lg hover:bg-gray-100 transition-colors" aria-label="Shake">
                     <span class="material-icons text-pink-600">vibration</span>
