Fix mobile gravity direction, improve charm motion for Rive-like fluidity, add phone tilt-responsive card reflection

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         #holographic-wrapper {
             position: relative;
             display: inline-block;
+            transition: transform 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
         
         .holo-overlay {
